Added handling of concepts with nil formats indicating they use a format that Metadata DB does not handle.